Estilos CSS terminados

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,22 +1,22 @@
 // --- --- --- 1-Settings (Variables & Preprocesadores) --- --- --- //
-// @import '1-Settings/1-settings';
+@import '1-Settings/1-settings';
 
 // --- --- --- 2-Tools (Mixins & Funciones) --- --- --- //
 // @import '2-Tools/1-tools';
 
 // --- --- --- 3-Generic (Reset, Normalize & Box-sizing) --- --- --- //
-// @import '3-Generic/1-box-sizing';
-// @import '3-Generic/2-normalize';
+@import '3-Generic/1-box-sizing';
+@import '3-Generic/2-normalize';
 
 // --- --- --- 4-Element (Elementos HTML base) --- --- --- //
-// @import '4-Element/1-body';
+@import '4-Element/1-body';
 
 // --- --- --- 5-Object (Layout & Mediaqueries) --- --- --- //
-// @import '5-Object/1-layout';
-// @import '5-Object/2-mediaqueries';
+@import '5-Object/1-layout';
+@import '5-Object/2-mediaqueries';
 
 // --- --- --- 6-Components (Bloques & Elementos) --- --- --- //
-// @import '6-Components/1-general';
+@import '6-Components/1-general';
 
 // --- --- --- 7-Utilities (Modificadores) --- --- --- //
-// @import '7-Utilities/1-utilities';
+@import '7-Utilities/1-utilities';
